test: type service and showtime